Fixed the problem stretching up of the product's image on home page.

--- a/app/assets/stylesheets/spree/frontend/main_content.scss
+++ b/app/assets/stylesheets/spree/frontend/main_content.scss
@@ -126,7 +126,10 @@ h2, h3 {
 
   .products {
     img {
-      // width: 100%;
+      display: block;
+      width: 100%;
+      height: 168px;
+      object-fit: cover;
     }
     p {
       padding: 5px;
